# beaug

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: balance.rs  bulk_disperse.rs  config.rs  disperse.rs  ethers_ledger_signer.rs  ledger_dispatch.rs  ledger_lock.rs  ledger_ops.rs  ledger_transaction_manager.rs  lib.rs  main.rs  native_ledger.rs  operation_log.rs  split_operations.rs  transaction_queue.rs  types.rs  user_settings.rs  utils.rs
src/gui/: app.rs  async_job.rs  helpers.rs  mod.rs  notifications.rs  theme.rs
src/gui/views/: balances.rs  dashboard.rs  disperse.rs  mod.rs  settings.rs  split.rs
src/gui/widgets/: mod.rs  transaction_view.rs
