[package]
name = "beaug"
version = "0.7.1"
edition = "2021"
rust-version = "1.75"
authors = ["schbz"]
description = "Beaug - Batch EVM Allocation Utility GUI for managing addresses and transactions via hardware wallet"
readme = "README.md"
repository = "https://github.com/schbz/beaug"
license = "MIT"
keywords = ["ethereum", "hardware-wallet", "evm", "gui"]
categories = ["cryptography::cryptocurrencies"]
exclude = ["contracts/", "assets/"]

[dependencies]
# Ethers-rs - for provider, types, and native Ledger support
ethers = { version = "2.0", features = ["rustls", "ledger"] }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
thiserror = "1.0"
url = "2.5.7"
hex = "0.4"
eframe = { version = "0.27", features = ["wgpu", "glow"] }
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
dirs = "5.0"
open = "5.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
